# rust-rocket-sample

./: Cargo.toml
src/: main.rs
src/controllers/: customer.rs  mod.rs
src/db/: customer.rs  mod.rs
src/errors/: response.rs
src/fairings/: counter.rs  mod.rs
src/models/: customer.rs  mod.rs  response.rs
src/request_guards/: basic.rs  mod.rs
